tests/negative/class/class_override_params.tx
// EXPECTED: COMPILE_ERROR
// Description: Test incompatible method override (parameter type mismatch).

class Base {
    getPos(): int { return 0; }
}

class Derived extends Base {
    // Error: parameter type mismatch
    getPos(offset: string): int { return 0; }
}

function main() {}
